# TodoList

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  task.py  todo.c  todo.py  todo_with_gui.py  users.py
src/: main.py
src/core/: __init__.py  data_service_manager.py  goal_manager.py  note_manager.py  project_manager.py  reminder_manager.py  schedule_manager.py  task_manager.py
src/database/: __init__.py  database_setup.py  db_operations.py  schema.sql
src/ui/: __init__.py  main_window.py  navigation_config.py
src/ui/styles/: dark.qss  light.qss
src/ui/views/: goal_view.py  note_view.py  project_view.py  reminder_view.py  schedule_view.py  settings_view.py  task_view.py
todo/: __main__.py  db.py  schema.sql  ui.py
