[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-app"
version = "0.1.0"
authors = [
  { name="Karesis", email="yangyifeng23@mails.ucas.ac.cn" },
]
description = "A simple command-line todo list application."

[tool.setuptools]
packages = ["todo"]

[project.scripts]
todo = "todo.__main__:main"
